force-app/main/default/objects/Book_List__c/Book_List__c.object-meta.xml
<CustomObject>
    <label>Book List</label>
    <nameField>
        <displayFormat>B-{0000000000}</displayFormat>
        <label>Book List Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Book List</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>