force-app/main/default/objects/Book_List__c/fields/Booklist_date__c.field-meta.xml
<CustomField>
    <fullName>Booklist_date__c</fullName>
    <description>Loading date of the booklist line.</description>
    <label>Booklist date</label>
    <type>Date</type>
</CustomField>