force-app/main/default/objects/Book_List__c/fields/Channel__c.field-meta.xml
<CustomField>
    <fullName>Channel__c</fullName>
    <description>(R1-S1 by JD): Channel.</description>
    <label>Channel</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Direct</fullName>
            </value>
            <value>
                <fullName>Retailer</fullName>
            </value>
            <value>
                <fullName>Direct / Retail</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>