force-app/main/default/objects/Book_List__c/fields/Deelfonds__c.field-meta.xml
<CustomField>
    <fullName>Deelfonds__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Deelfonds</label>
    <type>Checkbox</type>
</CustomField>