force-app/main/default/objects/Book_List__c/fields/Edition__c.field-meta.xml
<CustomField>
    <fullName>Edition__c</fullName>
    <description>Method related field.</description>
    <label>Edition</label>
    <length>255</length>
    <type>Text</type>
</CustomField>