force-app/main/default/objects/Book_List__c/fields/ISBN_13__c.field-meta.xml
<CustomField>
    <fullName>ISBN_13__c</fullName>
    <description>Product related field.</description>
    <label>ISBN-13</label>
    <length>255</length>
    <type>Text</type>
</CustomField>