force-app/main/default/objects/Book_List__c/fields/Method_Name__c.field-meta.xml
<CustomField>
    <fullName>Method_Name__c</fullName>
    <description>Method related field.</description>
    <label>Brand Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>