force-app/main/default/objects/Book_List__c/fields/Operating_Company__c.field-meta.xml
<CustomField>
    <fullName>Operating_Company__c</fullName>
    <label>Operating Company</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Noordhoff</fullName>
            </value>
            <value>
                <fullName>Plantyn</fullName>
            </value>
            <value>
                <fullName>Liber</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>