force-app/main/default/objects/Book_List__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>(R1-S1 by JD): Product.</description>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Book List</relationshipLabel>
    <relationshipName>Book_List</relationshipName>
    <type>Lookup</type>
</CustomField>