force-app/main/default/objects/Book_List__c/fields/Same_Learning_Line__c.field-meta.xml
<CustomField>
    <fullName>Same_Learning_Line__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Zelfde brand doorlopende leerlijn</label>
    <type>Checkbox</type>
</CustomField>