force-app/main/default/objects/Book_List__c/fields/Stream__c.field-meta.xml
<CustomField>
    <fullName>Stream__c</fullName>
    <description>Product related field.</description>
    <label>Stream</label>
    <length>255</length>
    <type>Text</type>
</CustomField>