force-app/main/default/objects/Book_List__c/fields/Unique_Key__c.field-meta.xml
<CustomField>
    <fullName>Unique_Key__c</fullName>
    <description>(R1-S1 by JD): Serves as the Unique Key for the Book List. It is the concatenation of the OpCo, the Year, the Account Customer Number and the ISBN/Order Nr.</description>
    <externalId>true</externalId>
    <inlineHelpText>Serves as the Unique Key for the Book List. It is the concatenation of the OpCo, the Year, the Account Customer Number and the ISBN/Order Nr.</inlineHelpText>
    <label>Unique Key</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>