force-app/main/default/objects/Book_List__c/fields/Verplicht__c.field-meta.xml
<CustomField>
    <fullName>Verplicht__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Verplicht</label>
    <type>Checkbox</type>
</CustomField>