force-app/main/default/objects/Book_List__c/fields/Year1__c.field-meta.xml
<CustomField>
    <fullName>Year1__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used by Plantyn SIMLink</description>
    <label>Year1</label>
    <type>Checkbox</type>
</CustomField>