force-app/main/default/objects/Book_List__c/fields/Year2__c.field-meta.xml
<CustomField>
    <fullName>Year2__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used by Plantyn SIMLink</description>
    <label>Year2</label>
    <type>Checkbox</type>
</CustomField>