force-app/main/default/objects/Book_List__c/fields/Year3__c.field-meta.xml
<CustomField>
    <fullName>Year3__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used by Plantyn SIMLink</description>
    <label>Year3</label>
    <type>Checkbox</type>
</CustomField>