force-app/main/default/objects/Book_List__c/fields/Years_in_use__c.field-meta.xml
<CustomField>
    <fullName>Years_in_use__c</fullName>
    <formula>YEAR(TODAY()) -  VALUE( Year__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Years in use</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>