force-app/main/default/objects/Book_List__c/recordTypes/Book_List_LI.recordType-meta.xml
<RecordType>
    <fullName>Book_List_LI</fullName>
    <active>true</active>
    <description>Book List (Liber)</description>
    <label>Book List (LI)</label>
</RecordType>